<resources>
    <string name="app_name">SubliMate</string>
    <string name="settings_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rearrange">Rearrange</string>
    <string name="menu_done_rearrange">Done Rearrange</string>
    <string name="menu_reset">Reset</string>

    <!-- Titles -->
    <string name="title_frequent">Recent</string>
    <string name="title_all_items">All Items</string>

    <!-- Errors -->
    <string name="error_message">Oops, something went wrong!</string>

    <!-- Manual Add Dialog -->
    <string name="add_dialog_title">Add an Item</string>
    <string name="add_dialog_item_name">Item Name: </string>
    <string name="add_dialog_item_quantity">Quantity: </string>
    <string name="add_dialog_add_item">Add</string>
    <string name="add_dialog_wait_title">Weighting for Item…</string>
    <string name="add_dialog_wait_text">Please put the entered item into the fridge.</string>

    <!-- Tiebreaker Dialog -->
    <string name="tiebreaker_dialog_title">Tiebreaker</string>
    <string name="tiebreaker_dialog_text">Please select the item you removed from the dropdown below.</string>
    <string name="tiebreaker_dialog_dropdown_text">Items:</string>
    <string name="OK">OK</string>

    <!-- Item Details Dialog -->
    <string name="item_details_weight">Weight: %1$dg</string>
    <string name="item_details_quantity">Quantity: %1$d</string>
    <string name="item_details_expiration">Expiration: %1$s</string>

    <!-- Fridge Rearrange Dialog -->
    <string name="rearrange_dialog_title">Rearrange Contents</string>
    <string name="rearrange_dialog_text">You are about to stop the fridge from responding to item changes in order to rearrange the fridge contents. Are you sure you want to proceed?</string>

    <!-- Preferences -->
    <string name="preferences_use_mock_label">Use Mock:</string>
    <string name="preferences_websocket_ip_label">WebSocket Address:</string>
    <string name="preferences_http_ip_label">HTTP Address:</string>
</resources>
